# Cpp_Rygame_Solitaire

./: CMakeLists.txt
code/: card.cpp  card.hpp  game.cpp  game.hpp  main.cpp  resourcemanager.cpp  resourcemanager.hpp
